--- a/locale/sk/LC_MESSAGES/messages.po
+++ b/locale/sk/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Webpay\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-23 12:05+0000\n"
-"PO-Revision-Date: 2014-05-11 19:17+0000\n"
+"PO-Revision-Date: 2014-07-07 20:16+0000\n"
 "Last-Translator: Vlado <valastiak@mozilla.sk>\n"
 "Language-Team: Mozilla.sk <l10n@mozilla.sk>\n"
 "Language: sk\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1399835866.0\n"
+"X-POOTLE-MTIME: 1404764200.0\n"
 
 #: public/js/lib/cancel.js:33
 msgid "Payment cancelled."
@@ -25,7 +25,7 @@ msgstr "Zrušiť"
 
 #: public/js/lib/pin-widget.js:58
 msgid "PIN can only contain digits."
-msgstr "PIN môže obsahovať len číslice"
+msgstr "Kód PIN môže obsahovať len číslice."
 
 #: webpay/base/templates/base.html:30
 msgid "You logged in as a different user, you must start the payment again."
@@ -78,7 +78,7 @@ msgstr "Prihlásiť sa"
 
 #: templates/login.html:6
 msgid "Sign in to continue with the payment"
-msgstr "Ak chcete pokračovať v platbe, prihláste sa."
+msgstr "Ak chcete pokračovať v platbe, prihláste sa"
 
 #: templates/login.html:7
 msgid "Sign in"
@@ -155,44 +155,40 @@ msgstr "Platba sa overuje"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
 msgid "Retrying"
-msgstr ""
+msgstr "Skúšam znova"
 
 #: public/js/lib/auth.js:64
-#, fuzzy
 msgid "That took longer than expected. Retry?"
-msgstr "Táto akcia trvá dlhšie než inokedy. Chcete to skúsiť znovu?"
+msgstr "Toto trvalo dlhšie ako by malo. Chcete to skúsiť znovu?"
 
 #: public/js/views/create-pin.js:37 templates/reset-start.html:11
 msgid "Back"
-msgstr ""
+msgstr "Naspäť"
 
 #: public/js/views/create-pin.js:38 public/js/views/enter-pin.js:95
 msgid "Submit"
-msgstr ""
+msgstr "Odoslať"
 
 #: public/js/views/create-pin.js:66 public/js/views/enter-pin.js:60
 #: public/js/views/reset-pin.js:28
 msgid "Retry?"
-msgstr ""
+msgstr "Znova?"
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
-#, fuzzy
 msgid "Create PIN"
 msgstr "Vytvoriť PIN"
 
 #: public/js/views/error.js:45
-#, fuzzy
 msgid "Something went wrong."
-msgstr "Niečo sa pokazilo"
+msgstr "Niečo sa pokazilo."
 
 #: public/js/views/reset-start.js:29
-#, fuzzy
 msgid "Reset your PIN?"
-msgstr "Vynulovať PIN"
+msgstr "Vynulovať PIN?"
 
 #: public/js/views/was-locked.js:13
 msgid "Was Locked"
-msgstr ""
+msgstr "Bol uzamknutý"
 
 #: public/js/views/wait-for-tx.js:10
 msgid "Setting up payment"
