--- a/locale/gl/LC_MESSAGES/messages.po
+++ b/locale/gl/LC_MESSAGES/messages.po
@@ -1,188 +1,196 @@
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-23 12:05+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2014-07-31 16:43+0000\n"
+"Last-Translator: Enrique <eu@keko.me>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.6.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.5.0\n"
+"X-POOTLE-MTIME: 1406824987.0\n"
 
 #: public/js/lib/cancel.js:33
 msgid "Payment cancelled."
-msgstr ""
+msgstr "Cancelouse o pagamento."
 
 #: public/js/views/create-pin.js:105 templates/error.html:20
 #: templates/pin-form.html:26
 msgid "Cancel"
-msgstr ""
+msgstr "Cancelar"
 
 #: public/js/lib/pin-widget.js:58
 msgid "PIN can only contain digits."
-msgstr ""
+msgstr "O PIN só pode conter díxitos."
 
 #: webpay/base/templates/base.html:30
 msgid "You logged in as a different user, you must start the payment again."
 msgstr ""
+"Identificouse como un usuario diferente, debe iniciar o pagamento de novo."
 
 #: public/js/views/throbber.js:15 public/js/views/throbber.js:16
 #: templates/throbber.html:7
 msgid "Loading"
-msgstr ""
+msgstr "Cargando"
 
 #: webpay/base/templates/base.html:32
 msgid "Beginning payment"
-msgstr ""
+msgstr "Comezando pagamento"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
-msgstr ""
+msgstr "Conectando a Mozilla Persona"
 
 #: webpay/base/templates/base.html:34
 msgid "Payment complete"
-msgstr ""
+msgstr "Rematou o pagamento"
 
 #: public/js/lib/auth.js:22
 msgid "Oops"
-msgstr ""
+msgstr "Vaites"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
-msgstr ""
+msgstr "Isto está tardando máis do esperado. Tentar de novo?"
 
 #: public/js/lib/auth.js:19
 msgid "Something went wrong. Try again?"
-msgstr ""
+msgstr "Algo foi mal. Tentar de novo?"
 
 #: templates/error.html:27
 msgid "OK"
-msgstr ""
+msgstr "Aceptar"
 
 #: public/js/views/error.js:44 public/js/views/locked.js:23
 msgid "Error"
-msgstr ""
+msgstr "Erro"
 
 #: public/js/views/enter-pin.js:96 public/js/views/enter-pin.js:100
 msgid "Enter PIN"
-msgstr ""
+msgstr "Escribir PIN"
 
 #: public/js/views/login.js:25 templates/login.html:5
 msgid "Sign In"
-msgstr ""
+msgstr "Identificarse"
 
 #: templates/login.html:6
 msgid "Sign in to continue with the payment"
-msgstr ""
+msgstr "Identifíquese para continuar co pagamento"
 
 #: templates/login.html:7
 msgid "Sign in"
-msgstr ""
+msgstr "Acceder"
 
 #: public/js/views/create-pin.js:106 public/js/views/create-pin.js:113
 #: public/js/views/reset-pin.js:64 templates/reset-start.html:12
 #: templates/was-locked.html:12
 msgid "Continue"
-msgstr ""
+msgstr "Continuar"
 
 #: public/js/views/enter-pin.js:73
 msgid "Wrong PIN"
-msgstr ""
+msgstr "PIN incorrecto"
 
 #: public/js/views/create-pin.js:48
 msgid "PINs do not match."
-msgstr ""
+msgstr "Non coinciden os PIN."
 
 #: webpay/pin/views.py:46 webpay/testing/views.py:25
 msgid "Create a PIN"
-msgstr ""
+msgstr "Crear un PIN"
 
 #: webpay/pin/views.py:68 webpay/pin/views.py:185
 #: public/js/views/create-pin.js:36
 msgid "Confirm PIN"
-msgstr ""
+msgstr "Confirmar PIN"
 
 #: webpay/pin/views.py:131 webpay/pin/views.py:157
 #: webpay/pin/templates/pin/pin_was_locked.html:13
 #: public/js/views/reset-pin.js:65 public/js/views/reset-pin.js:68
 #: templates/was-locked.html:11
 msgid "Reset PIN"
-msgstr ""
+msgstr "Restabelecer PIN"
 
 #. This is the same as the standard forgot
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6
 msgid "Forgot your PIN?"
-msgstr ""
+msgstr "Esqueceu o  PIN?"
 
 #: public/js/views/locked.js:24
 msgid ""
 "You entered the wrong PIN too many times. Your account is locked. Please try "
 "your purchase again in 5 minutes."
 msgstr ""
+"Escribiu o PIN mal demasiadas veces. Bloqueouse a súa conta. Tente de novo a "
+"súa compra en 5 minutos."
 
 #: templates/was-locked.html:6
 msgid "Your PIN was locked"
-msgstr ""
+msgstr "O seu PIN foi bloqueado"
 
 #: templates/was-locked.html:7
 msgid ""
 "Your PIN was locked because you entered it incorrectly too many times. You "
 "can continue and try entering your PIN again or reset your PIN."
 msgstr ""
+"O seu PIN foi bloqueado porque o escribiu incorrectamente demasiadas veces. "
+"Pode continuar e tentar escribir seu PIN de novo ou restabelecelo."
 
 #: templates/reset-start.html:7
 msgid ""
 "Are you sure you want to reset your PIN? You must sign in to Persona to "
 "reset your PIN."
 msgstr ""
+"Confirma que quere restabelecer o seu PIN? Debe identificarse en Mozilla "
+"Persona para restabelecer o seu PIN."
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
 msgid "Verifying payment"
-msgstr ""
+msgstr "Comprobando pagamento"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
 msgid "Retrying"
-msgstr ""
+msgstr "Tentando de novo"
 
 #: public/js/lib/auth.js:64
 msgid "That took longer than expected. Retry?"
-msgstr ""
+msgstr "Iso tomou máis tempo do esperado. Tentar de novo?"
 
 #: public/js/views/create-pin.js:37 templates/reset-start.html:11
 msgid "Back"
-msgstr ""
+msgstr "Atrás"
 
 #: public/js/views/create-pin.js:38 public/js/views/enter-pin.js:95
 msgid "Submit"
-msgstr ""
+msgstr "Enviar"
 
 #: public/js/views/create-pin.js:66 public/js/views/enter-pin.js:60
 #: public/js/views/reset-pin.js:28
 msgid "Retry?"
-msgstr ""
+msgstr "Tentar de novo?"
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
 msgid "Create PIN"
-msgstr ""
+msgstr "Crear PIN"
 
 #: public/js/views/error.js:45
 msgid "Something went wrong."
-msgstr ""
+msgstr "Algo foi mal."
 
 #: public/js/views/reset-start.js:29
 msgid "Reset your PIN?"
-msgstr ""
+msgstr "Restabelecer o seu PIN?"
 
 #: public/js/views/was-locked.js:13
 msgid "Was Locked"
-msgstr ""
+msgstr "Foi bloqueado"
 
 #: public/js/views/wait-for-tx.js:10
 msgid "Setting up payment"
-msgstr ""
+msgstr "Configurando pagamento"
