--- a/locale/bn_BD/LC_MESSAGES/messages.po
+++ b/locale/bn_BD/LC_MESSAGES/messages.po
@@ -1,188 +1,197 @@
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-23 12:05+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2014-08-13 16:10+0000\n"
+"Last-Translator: Zobayer Ahmed <zobayer_mc@yahoo.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: bn_BD\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.6.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.5.0\n"
+"X-POOTLE-MTIME: 1407946227.0\n"
 
 #: public/js/lib/cancel.js:33
 msgid "Payment cancelled."
-msgstr ""
+msgstr "পরিশোধ বাতিল হয়েছে।"
 
 #: public/js/views/create-pin.js:105 templates/error.html:20
 #: templates/pin-form.html:26
 msgid "Cancel"
-msgstr ""
+msgstr "বাতিল"
 
 #: public/js/lib/pin-widget.js:58
 msgid "PIN can only contain digits."
-msgstr ""
+msgstr "PIN এ শুধু সংখ্যা থাকতে পারবে।"
 
 #: webpay/base/templates/base.html:30
 msgid "You logged in as a different user, you must start the payment again."
 msgstr ""
+"আপনি ভিন্ন ব্যবহাকারী হিসাবে লগইন করা আছে, আপনাকে পুনরায় পেমেন্ট শুরু করতে "
+"হবে।"
 
 #: public/js/views/throbber.js:15 public/js/views/throbber.js:16
 #: templates/throbber.html:7
 msgid "Loading"
-msgstr ""
+msgstr "লোড হচ্ছে"
 
 #: webpay/base/templates/base.html:32
 msgid "Beginning payment"
-msgstr ""
+msgstr "পেমেন্ট শুরু হচ্ছে"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
-msgstr ""
+msgstr "পার্সোনায় সংযুক্ত হচ্ছে"
 
 #: webpay/base/templates/base.html:34
 msgid "Payment complete"
-msgstr ""
+msgstr "পেমেন্ট সম্পন্ন হয়েছে"
 
 #: public/js/lib/auth.js:22
 msgid "Oops"
-msgstr ""
+msgstr "ওপস্‌"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
-msgstr ""
+msgstr "প্রয়োজনের চেয়ে বেশি সময় নিচ্ছে। পুনরায় চেষ্টা করবেন?"
 
 #: public/js/lib/auth.js:19
 msgid "Something went wrong. Try again?"
-msgstr ""
+msgstr "কোন কিছু ভুল হয়েছে। পুনরায় চেষ্টা করবেন?"
 
 #: templates/error.html:27
 msgid "OK"
-msgstr ""
+msgstr "ঠিক আছে"
 
 #: public/js/views/error.js:44 public/js/views/locked.js:23
 msgid "Error"
-msgstr ""
+msgstr "ত্রুটি"
 
 #: public/js/views/enter-pin.js:96 public/js/views/enter-pin.js:100
 msgid "Enter PIN"
-msgstr ""
+msgstr "PIN দিন"
 
 #: public/js/views/login.js:25 templates/login.html:5
 msgid "Sign In"
-msgstr ""
+msgstr "সাইন ইন"
 
 #: templates/login.html:6
 msgid "Sign in to continue with the payment"
-msgstr ""
+msgstr "পেমেন্ট চালিয়ে যেতে সাইন ইন করুন"
 
 #: templates/login.html:7
 msgid "Sign in"
-msgstr ""
+msgstr "সাইন ইন"
 
 #: public/js/views/create-pin.js:106 public/js/views/create-pin.js:113
 #: public/js/views/reset-pin.js:64 templates/reset-start.html:12
 #: templates/was-locked.html:12
 msgid "Continue"
-msgstr ""
+msgstr "চালিয়ে যান"
 
 #: public/js/views/enter-pin.js:73
 msgid "Wrong PIN"
-msgstr ""
+msgstr "ভুল PIN"
 
 #: public/js/views/create-pin.js:48
 msgid "PINs do not match."
-msgstr ""
+msgstr "PIN মিলছে না।"
 
 #: webpay/pin/views.py:46 webpay/testing/views.py:25
 msgid "Create a PIN"
-msgstr ""
+msgstr "একটি PIN তৈরি করুন"
 
 #: webpay/pin/views.py:68 webpay/pin/views.py:185
 #: public/js/views/create-pin.js:36
 msgid "Confirm PIN"
-msgstr ""
+msgstr "PIN নিশ্চিত করুন"
 
 #: webpay/pin/views.py:131 webpay/pin/views.py:157
 #: webpay/pin/templates/pin/pin_was_locked.html:13
 #: public/js/views/reset-pin.js:65 public/js/views/reset-pin.js:68
 #: templates/was-locked.html:11
 msgid "Reset PIN"
-msgstr ""
+msgstr "PIN রিসেট করুন"
 
 #. This is the same as the standard forgot
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6
 msgid "Forgot your PIN?"
-msgstr ""
+msgstr "PIN ভুলে গেছেন?"
 
 #: public/js/views/locked.js:24
 msgid ""
 "You entered the wrong PIN too many times. Your account is locked. Please try "
 "your purchase again in 5 minutes."
 msgstr ""
+"আপনি অনেক বার ভুল PIN দিয়েছেন। আপনার অ্যাকাউন্ট লক করা হয়েছে। অনুগ্রহে ৫ "
+"মিনিট পর পুনরায় ক্রয়ে চেষ্টা করুন।"
 
 #: templates/was-locked.html:6
 msgid "Your PIN was locked"
-msgstr ""
+msgstr "আপনার PIN লক করা ছিলো"
 
 #: templates/was-locked.html:7
 msgid ""
 "Your PIN was locked because you entered it incorrectly too many times. You "
 "can continue and try entering your PIN again or reset your PIN."
 msgstr ""
+"আপনি অনেক বার ভুল PIN দেওয়ার এটি লক করা হয়েছিলো। আপনি চালিয়ে যেতে পারেন এবং "
+"পুনরায় PIN দিতে পারেন অথবা রিসেট করতে পারেন।"
 
 #: templates/reset-start.html:7
 msgid ""
 "Are you sure you want to reset your PIN? You must sign in to Persona to "
 "reset your PIN."
 msgstr ""
+"আপনি নিশ্চিত আপনি PIN রিসেট করতে চান? PIN রিসেট করতে পার্সোনায় সাইন ইন করতে "
+"হবে।"
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
 msgid "Verifying payment"
-msgstr ""
+msgstr "পেমেন্ট যাচাই করা হচ্ছে"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
 msgid "Retrying"
-msgstr ""
+msgstr "পুনরায় চেষ্টা করা হচ্ছে"
 
 #: public/js/lib/auth.js:64
 msgid "That took longer than expected. Retry?"
-msgstr ""
+msgstr "প্রয়োজনের চেয়ে বেশি সময় নিচ্ছে। পুনরায় চেষ্টা করবেন?"
 
 #: public/js/views/create-pin.js:37 templates/reset-start.html:11
 msgid "Back"
-msgstr ""
+msgstr "পূর্ববর্তী"
 
 #: public/js/views/create-pin.js:38 public/js/views/enter-pin.js:95
 msgid "Submit"
-msgstr ""
+msgstr "জমা দিন"
 
 #: public/js/views/create-pin.js:66 public/js/views/enter-pin.js:60
 #: public/js/views/reset-pin.js:28
 msgid "Retry?"
-msgstr ""
+msgstr "পুনরায় চেষ্টা করব?"
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
 msgid "Create PIN"
-msgstr ""
+msgstr "PIN তৈরি"
 
 #: public/js/views/error.js:45
 msgid "Something went wrong."
-msgstr ""
+msgstr "কোন ভুল হয়েছে।"
 
 #: public/js/views/reset-start.js:29
 msgid "Reset your PIN?"
-msgstr ""
+msgstr "PIN রিসেট করব?"
 
 #: public/js/views/was-locked.js:13
 msgid "Was Locked"
-msgstr ""
+msgstr "লক ছিলো"
 
 #: public/js/views/wait-for-tx.js:10
 msgid "Setting up payment"
-msgstr ""
+msgstr "পেমেন্ট সেট করা হচ্ছে"
