--- a/locale/de/LC_MESSAGES/messages.po
+++ b/locale/de/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: AMO Webpay\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-01 10:55+0000\n"
-"PO-Revision-Date: 2014-06-27 15:22+0000\n"
+"PO-Revision-Date: 2014-09-01 16:18+0000\n"
 "Last-Translator: Michael <michael.koehler1@gmx.de>\n"
 "Language-Team: German (de) <coce@nufuerspam.de>\n"
 "Language: de\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1403882522.0\n"
+"X-POOTLE-MTIME: 1409588299.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 msgid "Payment cancelled."
@@ -214,133 +214,141 @@ msgstr "Zahlung wird eingerichtet"
 
 #: public/js/error-codes.js:12
 msgid "An internal web request timed out."
-msgstr ""
+msgstr "Zeitüberschreitung bei einer internen Web-Anfrage."
 
 #: public/js/error-codes.js:13
 msgid "The system timed out while trying to log in."
-msgstr ""
+msgstr "Zeitüberschreitung des Systems während des Anmeldeversuchs."
 
 #: public/js/error-codes.js:14
 msgid "An error occurred whilst trying to log out."
-msgstr ""
+msgstr "Beim Abmeldeversuch ist ein Fehler aufgetreten."
 
 #: public/js/error-codes.js:15
 msgid "The system timed out while trying to log out."
-msgstr ""
+msgstr "Zeitüberschreitung des Systems während des Abmeldeversuchs."
 
 #: public/js/error-codes.js:16
 msgid "Payments are temporarily disabled."
-msgstr ""
+msgstr "Zahlungen sind temporär deaktiviert."
 
 #: public/js/error-codes.js:17
 msgid "An unexpected error occurred when creating your PIN."
-msgstr ""
+msgstr "Beim Erstellen Ihrer PIN ist ein unerwarteter Fehler aufgetreten."
 
 #: public/js/error-codes.js:18 public/js/error-codes.js:27
 msgid "The PIN data submitted was invalid."
-msgstr ""
+msgstr "Die übermittelten PIN-Daten waren ungültig."
 
 #: public/js/error-codes.js:19
 msgid "No valid user found whilst attempting to create your PIN"
-msgstr ""
+msgstr "Bei Erstellen Ihrer PIN wurde kein gültiger Benutzer gefunden"
 
 #: public/js/error-codes.js:20
 msgid "Permission denied attempting to create your PIN."
-msgstr ""
+msgstr "Beim Versuch, Ihre PIN zu erstellen, wurde die Erlaubnis verweigert."
 
 #: public/js/error-codes.js:21
 msgid "The request timed out whilst attempting to create your PIN."
 msgstr ""
+"Beim Versuch, Ihre PIN zu erstellen, wurde die Zeitüberschreitung für die "
+"Anfrage überschritten."
 
 #: public/js/error-codes.js:22
 msgid "An unexpected error occurred whilst checking your PIN."
-msgstr ""
+msgstr "Beim Überprüfen Ihrer PIN ist ein unerwarteter Fehler aufgetreten."
 
 #: public/js/error-codes.js:23
 msgid "No valid user found whilst checking your PIN"
-msgstr ""
+msgstr "Beim Überprüfen Ihrer PIN wurde kein gültiger Benutzer gefunden"
 
 #: public/js/error-codes.js:24
 msgid "Permission denied attempting to check your PIN"
-msgstr ""
+msgstr "Beim Versuch, Ihre PIN zu überprüfen, wurde die Erlaubnis verweigert."
 
 #: public/js/error-codes.js:25
 msgid "The request timed out whilst trying to check your PIN"
 msgstr ""
+"Beim Versuch, Ihre PIN zu überprüfen, wurde die Zeitüberschreitung für die "
+"Anfrage überschritten"
 
 #: public/js/error-codes.js:26
 msgid "An unexpected error occurred when resetting your PIN."
-msgstr ""
+msgstr "Beim Zurücksetzen Ihrer PIN ist ein unerwarteter Fehler aufgetreten."
 
 #: public/js/error-codes.js:28
 msgid "No valid user found whilst attempting to reset your PIN"
 msgstr ""
+"Beim Versuch, Ihre PIN zurückzusetzen, wurde kein gültiger Benutzer gefunden"
 
 #: public/js/error-codes.js:29
 msgid "Permission denied attempting to reset your PIN."
-msgstr ""
+msgstr "Beim Versuch, Ihre PIN zurückzusetzen, wurde die Erlaubnis verweigert."
 
 #: public/js/error-codes.js:30
 msgid "The request timed out whilst attempting to reset your PIN."
 msgstr ""
+"Beim Versuch, Ihre PIN zurückzusetzen, wurde die Zeitüberschreitung für die "
+"Anfrage überschritten."
 
 #: public/js/error-codes.js:31
 msgid "The transaction failed. You have not been charged for this purchase."
 msgstr ""
+"Die Transaktion ist fehlgeschlagen. Ihr Konto wurde für diesen Kauf nicht "
+"belastet."
 
 #: public/js/error-codes.js:32
 msgid ""
 "The payment method or price point is not supported for this region or "
 "operator."
 msgstr ""
+"Die Zahlungsmethode oder der Preispunkt wird für diese Region oder diesen "
+"Betreiber nicht unterstützt."
 
 #: public/js/lib/auth.js:214
 msgid "Waiting for login"
-msgstr ""
+msgstr "Warten auf Anmeldung…"
 
 #: public/js/lib/wait.js:56
 msgid "Retrieving Transaction"
-msgstr ""
+msgstr "Transaktion wird empfangen…"
 
 #: public/js/views/error.js:55
 msgid "An unexpected error occurred."
-msgstr ""
+msgstr "Ein unerwarteter Fehler ist aufgetreten."
 
 #: public/js/views/force-auth.js:87
 msgid "Sign-in to reset PIN"
-msgstr ""
+msgstr "Melden Sie sich an, um die PIN zurückzusetzen"
 
 #: public/js/views/force-auth.js:90
 msgid "Please sign in to reset your PIN."
-msgstr ""
+msgstr "Bitte melden Sie sich an, um die PIN zurückzusetzen."
 
 #: public/js/views/init.js:12
 msgid "Initializing"
-msgstr ""
+msgstr "Initialisieren…"
 
 #: public/js/views/locked.js:21
-#, fuzzy
 msgid "PIN Locked"
-msgstr "Wurde gesperrt"
+msgstr "PIN gesperrt"
 
 #: public/js/views/payment-success.js:15 public/js/views/wait-to-finish.js:14
-#, fuzzy
 msgid "Completing payment"
-msgstr "Zahlung wird eingerichtet"
+msgstr "Zahlung wird abgeschlossen"
 
 #: public/js/views/simulate.js:23
 msgid "Processing"
-msgstr ""
+msgstr "Verarbeiten…"
 
 #: public/js/views/simulate.js:51
 msgid "Simulate Payment"
-msgstr ""
+msgstr "Simulierte Zahlung"
 
 #: public/js/views/simulate.js:55
 msgid "You will not be charged."
-msgstr ""
+msgstr "Ihr Konto wird nicht belastet."
 
 #: templates/reset-start.html:12
-#, fuzzy
 msgid "Reset"
-msgstr "PIN zurücksetzen"
+msgstr "Zurücksetzen"
